--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.2",
-    "@react-navigation/native": "^6.1.1",
-    "@react-navigation/stack": "^6.3.10",
+    "@react-native-community/masked-view": "^0.1.11",
+    "lodash.remove": "^4.7.0",
     "react": "18.1.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.70.6",
     "react-native-element-dropdown": "^2.5.1",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^4.10.3",
+    "react-native-paper": "^5.1.3",
+    "react-native-reanimated": "^2.14.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
   },
