--- a/package.json
+++ b/package.json
@@ -10,23 +10,56 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "lodash.remove": "^4.7.0",
+    "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/material-top-tabs": "^6.5.3",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
+    "@react-navigation/stack": "^6.3.12",
+    "@react-spring/native": "^9.6.1",
+    "@ui-kitten/components": "^5.1.2",
+    "@ui-kitten/eva-icons": "^5.1.2",
+    "expo-app-loading": "^2.1.1",
+    "expo-constants": "^14.0.2",
+    "expo-font": "^11.0.1",
+    "expo-image-picker": "^14.1.0",
+    "expo-permissions": "^14.0.0",
+    "expo-status-bar": "^1.4.2",
+    "lottie-ios": "^3.4.0",
+    "lottie-react-native": "^5.1.4",
+    "native-base": "^3.4.25",
     "react": "18.1.0",
-    "react-dom": "^18.2.0",
     "react-native": "0.70.6",
-    "react-native-element-dropdown": "^2.5.1",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-bootstrap-styles": "^4.5.0-r",
+    "react-native-calendar-picker": "^7.1.3",
+    "react-native-calendario": "^3.3.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-flash-message": "^0.4.0",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-image-picker": "^4.10.3",
-    "react-native-paper": "^5.1.3",
-    "react-native-reanimated": "^2.14.2",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-native-vector-icons": "^9.2.0",
-    "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
+    "react-native-grid-component": "^2.0.1",
+    "react-native-image-picker": "^5.0.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-overlay": "^1.3.1",
+    "react-native-orientation-loading-overlay": "^0.1.6",
+    "react-native-paper": "^5.1.4",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
+    "react-native-slideable-calendar-strip": "^0.4.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^9.13.6",
+    "react-native-tab-view": "^3.3.4",
+    "react-native-table-component": "^1.2.2",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "redux": "^4.2.1",
+    "styled-components": "^5.3.6",
+    "twrnc": "^3.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
