--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@adrianso/react-native-device-brightness": "^1.2.7",
     "@eva-design/eva": "^2.1.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/geolocation": "^3.0.5",
     "@react-native-community/hooks": "^3.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^9.3.7",
+    "@react-native-community/slider": "^4.4.2",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/material-top-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.3",
@@ -22,40 +27,50 @@
     "@react-spring/native": "^9.6.1",
     "@ui-kitten/components": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
+    "axios": "^1.3.3",
     "expo-app-loading": "^2.1.1",
     "expo-constants": "^14.0.2",
     "expo-font": "^11.0.1",
     "expo-image-picker": "^14.1.0",
     "expo-permissions": "^14.0.0",
     "expo-status-bar": "^1.4.2",
+    "geolib": "^3.3.3",
     "lottie-ios": "^3.4.0",
     "lottie-react-native": "^5.1.4",
     "native-base": "^3.4.25",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-anchor-carousel": "^4.0.1",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-bootstrap-styles": "^4.5.0-r",
     "react-native-calendar-picker": "^7.1.3",
     "react-native-calendario": "^3.3.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-communications": "^2.2.1",
     "react-native-elements": "^3.4.3",
     "react-native-flash-message": "^0.4.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-grid-component": "^2.0.1",
     "react-native-image-picker": "^5.0.1",
+    "react-native-keep-awake": "^4.0.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-overlay": "^1.3.1",
     "react-native-orientation-loading-overlay": "^0.1.6",
     "react-native-paper": "^5.1.4",
+    "react-native-parallax-swiper": "^1.1.7",
+    "react-native-phone-call": "^1.2.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-signature-capture": "^0.4.12",
     "react-native-slideable-calendar-strip": "^0.4.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-sound": "^0.11.2",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^9.13.6",
     "react-native-tab-view": "^3.3.4",
     "react-native-table-component": "^1.2.2",
+    "react-native-view-shot": "^3.5.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "styled-components": "^5.3.6",
